apps/base/lldap/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lldap
  labels:
    pod-security.kubernetes.io/enforce: restricted
